Fix CurrentEngine not updating list of albums by same artist if the artist of the currently playing album is edited.

ChangeLog++

BUG: 210296